posiGen_FullsendBox/src/objects/System_Channel__c.object
<CustomObject>
    <fields>
        <fullName>Active_Status_Date__c</fullName>
        <description>Timestamps when Status=Active</description>
        <label>Active Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Serial__c</fullName>
        <inlineHelpText>This is the asset serial number in Powerdash</inlineHelpText>
        <label>PD Asset Serial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_In_Service__c</fullName>
        <label>Date In Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Out_of_Service__c</fullName>
        <label>PD Date Out of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Status_Date__c</fullName>
        <description>Timestamps when Status=Inactive</description>
        <label>Inactive Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>PD Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_To_System_Method__c</fullName>
        <description>Post 201409, this should be based on the System Numeric ID existing in the PV Fleet Mgt System (e.g. PowerDash), but for manual uploads this is the log</description>
        <inlineHelpText>Post 201409, this should be based on the System Numeric ID existing in the PV Fleet Mgt System (e.g. PowerDash), but for manual uploads this is the log</inlineHelpText>
        <label>Matched To System Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_For_Numeric_ID__c</fullName>
        <formula>System__r.Project_Created_For_Opp_NumeriID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created For Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_For__c</fullName>
        <formula>System__r.Project_Created_For_Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_Read_Status_Date__c</fullName>
        <description>Timestamps when Status=Register Read</description>
        <label>Register Read Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Register Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>??</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Customer_ID__c</fullName>
        <label>PD System Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>PD System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Numeric_ID__c</fullName>
        <description>Unique Numeric ID of the System</description>
        <formula>System__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique Numeric ID of the System</inlineHelpText>
        <label>System Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>System Channels</relationshipLabel>
        <relationshipName>System_Channels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>System Channel</label>
    <listViews>
        <fullName>Channels_not_on_a_real_system</fullName>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>Asset_Serial__c</columns>
        <columns>Date_Out_of_Service__c</columns>
        <columns>Label__c</columns>
        <columns>System_Name__c</columns>
        <columns>System_Customer_ID__c</columns>
        <columns>Matched_To_System_Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>equals</operation>
            <value>S-014394</value>
        </filters>
        <label>Channels not on a real system</label>
    </listViews>
    <nameField>
        <label>System Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>